// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountryResults renders 1`] = `
<div>
  <div>
    <br />
    <div
      class="sc-AxjAm dIkWa"
    >
      <div
        class="MuiPaper-root MuiCard-root MuiPaper-elevation1"
      >
         
        
         
      </div>
    </div>
    <br />
    <div>
      <div
        class="sc-AxiKw doAfSR"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Shuffle
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`CustomButton renders 1`] = `
<div>
  <div
    class="sc-AxiKw doAfSR"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Shuffle
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Dashboard renders 1`] = `
<div>
  <div>
    <div>
      <div
        class="sc-AxiKw doAfSR"
      >
        <h1>
           Start Shuffling! 
        </h1>
      </div>
    </div>
    <div
      class="sc-AxhCb dncfSl"
    >
      <div
        class="MuiFormControl-root myFormClass"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            role="button"
            tabindex="0"
          >
            🇩🇪
             
            Germany
          </div>
          <input
            type="hidden"
            value="Germany"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-filled"
        >
          Region
        </p>
      </div>
      <div>
        <br />
        <div
          class="sc-AxjAm dIkWa"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1"
          >
             
            
             
          </div>
        </div>
        <br />
        <div>
          <div
            class="sc-AxiKw doAfSR"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Shuffle
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Greeting renders 1`] = `
<div>
  <div
    class="sc-AxiKw doAfSR"
  >
    <h1>
       Start Shuffling! 
    </h1>
  </div>
</div>
`;
